[project]
name = "lattica-core"
version = "0.1.0"
description = " Lattica Protocol core contracts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["titanoboa>=0.1.9", "vyper>=0.4.3", "vyper-lsp"]

[tool.uv.sources]
vyper-lsp = { git = "https://github.com/vyperlang/vyper-lsp.git", rev = "43116b3ca8e5a1f5a1c08adf448fd2d09daaf4dc" }
